--- a/musicmaps.css
+++ b/musicmaps.css
@@ -17,7 +17,7 @@
 }
 
 h1 {
-	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 	font-size: 24px;
 	font-style: normal;
 	font-variant: normal;
