--- a/musicmaps.css
+++ b/musicmaps.css
@@ -3,6 +3,8 @@
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+
 }
 
 .navbar {
