--- a/musicmaps.css
+++ b/musicmaps.css
@@ -60,3 +60,14 @@ a:focus {
 .aboutus {
   text-align: center;
 }
+
+.locations {
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
+	
+}
+
+
