--- a/musicmaps.css
+++ b/musicmaps.css
@@ -73,6 +73,12 @@ a:focus {
   font-size: 36px;
 }
 
+.background {
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-attachment: fixed;
+}
+}
 	
 }
 
