--- a/musicmaps.css
+++ b/musicmaps.css
@@ -74,7 +74,7 @@ a:focus {
 }
 
 .body {
-    background-image: url("background.jpeg");
+    background-image: url("back1.jpeg");
     background-color: white;
     background-size: 100% 100%;
     background-repeat: no-repeat;
