--- a/musicmaps.css
+++ b/musicmaps.css
@@ -76,7 +76,7 @@ a:focus {
 .body {
     background-image: url("back1.jpg");
     background-color: white;
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
