--- a/musicmaps.css
+++ b/musicmaps.css
@@ -81,6 +81,15 @@ a:focus {
     background-attachment: fixed;
 }
 
+.tagline {
+	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 20px;
+}
+
 }
 
 
